projects/compiler/test/typechecker/invocation/generics_error_method.1.out
Error at %FILE_NAME%:9:12
Type mismatch for parameter
  |  val _ = fn("foo")
                ^
Expected: Int
but instead found: String
