projects/compiler/test/typechecker/invocation/generics_error_method.1.abra
type Foo<T> {
  t: T

  func foo(self, t: T): T[] = [self.t, t]
}

val f = Foo(t: 123)
val fn = f.foo
val _ = fn("foo")
